upgrade spring-boot, java 21 and modified Page to record